--- a/.github/workflows/ci_dockers.yml
+++ b/.github/workflows/ci_dockers.yml
@@ -118,7 +118,7 @@ jobs:
             pytorch_version: 1.4
           - python_version: 3.7
             pytorch_version: 1.7
-          - python_version: 3.8
+          - python_version: 3.7
             pytorch_version: 1.8
     steps:
       - name: Checkout
@@ -126,8 +126,7 @@ jobs:
 
       # for PT 1.3 and 1.4 we need to use CUDA 10.1
       - run: |
-          cuda=$(python -c "print(10.2 if float(${{matrix.pytorch_version}}) >= 1.5 else 10.1)" 2>&1)
-          cuda=$(python -c "print('11.2.0' if float(${{matrix.pytorch_version}}) >= 1.8 else $cuda)" 2>&1)
+          cuda=$(python -c "print(10.2 if float(${{matrix.pytorch_version}}) > 1.4 else 10.1)" 2>&1)
           echo "::set-output name=CUDA::$cuda"
         id: extend
 
