--- a/dockers/base-conda/Dockerfile
+++ b/dockers/base-conda/Dockerfile
@@ -18,12 +18,12 @@
 # --build-arg PYTHON_VERSION=3.7 --build-arg PYTORCH_VERSION=1.5
 # --build-arg PYTHON_VERSION=3.7 --build-arg PYTORCH_VERSION=1.4
 
-# ARG CUDNN_VERSION=8
+ARG CUDNN_VERSION=8
 ARG CUDA_VERSION=10.2
 
 # FROM nvidia/cuda:${CUDA_VERSION}-devel-ubuntu20.04
-# FROM nvidia/cuda:${CUDA_VERSION}-cudnn${CUDNN_VERSION}-devel-ubuntu18.04
-FROM nvidia/cuda:${CUDA_VERSION}-devel-ubuntu18.04
+FROM nvidia/cuda:${CUDA_VERSION}-cudnn${CUDNN_VERSION}-devel-ubuntu18.04
+# FROM nvidia/cuda:${CUDA_VERSION}-devel-ubuntu18.04
 
 ARG PYTHON_VERSION=3.7
 ARG PYTORCH_VERSION=1.6
@@ -76,10 +76,7 @@ ENV \
 COPY environment.yml environment.yml
 
 # conda init
-RUN conda create -y --name $CONDA_ENV \
-        python=${PYTHON_VERSION} pytorch=${PYTORCH_VERSION} cudatoolkit=${CUDA_VERSION} \
-        -c conda-forge -c pytorch -c pytorch-test -c pytorch-nightly \
-    && \
+RUN conda create -y --name $CONDA_ENV python=${PYTHON_VERSION} pytorch=${PYTORCH_VERSION} cudatoolkit=${CUDA_VERSION} -c pytorch -c pytorch-test -c pytorch-nightly && \
     conda init bash && \
     # NOTE: this requires that the channel is presented in the yaml before packages
     # replace channel to nigtly if needed, fix PT version and remove Horovod as it will be installed later
